[gd_scene load_steps=4 format=3 uid="uid://k1xngoj2tsmq"]

[ext_resource type="Texture2D" uid="uid://sywkdoyufxd2" path="res://scenes/Projectile/bullet (1).png" id="1_2ok84"]
[ext_resource type="Script" uid="uid://dtmrsewsmfkjs" path="res://scenes/Projectile/bullet.gd" id="2_2ok84"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ok84"]
size = Vector2(6, 3)

[node name="bullet" type="Sprite2D"]
texture = ExtResource("1_2ok84")
script = ExtResource("2_2ok84")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_2ok84")

[node name="LifetimeTimer" type="Timer" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(24, 0)
collision_mask = 12

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -13.0
offset_top = -5.0
offset_right = 13.0
offset_bottom = 5.0

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 3.0
offset_top = -5.0
offset_right = 13.0
offset_bottom = 5.0
color = Color(1, 0.054902, 1, 1)

[node name="bullet_line" type="Line2D" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_lifetime_timer_timeout"]
